# Social-media-connection-analyser

./: .gitignore  CMakeLists.txt  README.md  vercel.json
data/: sample_edges.txt  sample_users.txt
src/: main.cpp
tests/: test_bfs.cpp  test_graph.cpp  test_recommendation.cpp
web/: index.html  style.css
web/backend/: package-lock.json  package.json  server.js
web/backend/routes/: graphRoutes.js  userRoutes.js
web/src/: Algorithms.js  BFS.js  CustomDropdown.js  DFS.js  Graph.js  SocialNetwork.js  app.js
